--- a/premierProjet/css/premierStyles.css
+++ b/premierProjet/css/premierStyles.css
@@ -1,3 +1,24 @@
-.root{
-    background-color: aquamarine;
+.root {
+    -fx-padding: 15;
+    -fx-background-color: cornsilk;
+}
+.label{
+    -fx-text-fill: #4682b4;
+    -fx-font-size: 1.5em;
+}
+#today {
+    -fx-background-color: #FF5733;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-padding: 5px;
+    -fx-border-radius: 5px;
+}
+#dateHorsMois {
+    -fx-background-color: #596b94;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-padding: 5px;
+    -fx-border-radius: 5px;
+
+
 }
